--- a/etc/ulaneconfig.ini
+++ b/etc/ulaneconfig.ini
@@ -22,4 +22,11 @@ iDBPort         =    0        #默认配置为0    请不要修改
 iDBUnixSock     =    NULL     #默认配置为NULL 请不要修改
 iDBClientFlag   =    0        #默认配置为0    请不要修改
 
+#日志级别的配置
+iNolog          =    1        #表示没有日志 
+iDebug          =    2        #打调试日志 
+iInfo           =    3        #打信息日志 
+iWarning        =    4        #打警告日志 
+iError          =    5        #打错误日志
+
 
